--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ollama/ollama:latest
     container_name: ollama
     ports:
-      - "11434:11434"
+      - 11434:11434
     volumes:
       - ollama_data:/root/.ollama
     restart: unless-stopped
@@ -12,14 +12,42 @@ services:
     image: redis:6.2.6-alpine
     container_name: redis
     ports:
-      - "6379:6379"
+      - 6379:6379
     volumes:
       - redis_data:/data
     command: redis-server --save 20 1 --loglevel warning
     restart: always
   
+  postgresql:
+    image: pgvector/pgvector:pg17
+    container_name: postgresql
+    ports:
+      - 5432:5432
+    volumes:
+      - postgresql_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=Password123!
+      - POSTGRES_USER=admin
+
+  pgAdmin:
+    image: dpage/pgadmin4
+    container_name: pgAdmin
+    ports:
+      - 15433:80
+    depends_on:
+      - postgresql
+    volumes:
+      - pgAdmin_data:/var/lib/pgAdmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=myemail@email.com
+      - PGADMIN_DEFAULT_PASSWORD=Password123!
+
 volumes:
   ollama_data:
     name: ollama_data
   redis_data:
     name: redis_data
+  postgresql_data:
+    name: postgresql_data
+  pgAdmin_data:
+    name: pgAdmin_data
