--- a/src/LocalRagCli/LocalRagCli.csproj
+++ b/src/LocalRagCli/LocalRagCli.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="9.0.3" />
+    <PackageReference Include="Ollamasharp" Version="5.2.8" />
+    <PackageReference Include="Pgvector" Version="0.3.2" />
+  </ItemGroup>
+
 </Project>
